[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/_common/GUI/sfx/wow.ogg" type="AudioStream" id=1]
[ext_resource path="res://scenes/MenuScenes/VolumeSlider.gd" type="Script" id=2]

[node name="VolumeSlider" type="HSlider"]
margin_left = 408.0
margin_top = 83.0
margin_right = 708.0
margin_bottom = 162.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[connection signal="drag_ended" from="." to="." method="_on_VolumeSlider_drag_ended"]
[connection signal="drag_started" from="." to="." method="_on_VolumeSlider_drag_started"]
[connection signal="value_changed" from="." to="." method="_on_VolumeSlider_value_changed"]
